Bug 343602: profile-startup-category notifications don't happen if profile is specified.  r=biesi, sr=Neil.  Also update update notifications to ignore notifications when switching profiles.  r+sr=Neil.